corrects left-hand gutter alignment on main-content area.

--- a/app/styles/components/learner-group/root.scss
+++ b/app/styles/components/learner-group/root.scss
@@ -9,6 +9,7 @@
 
   .learner-group-overview {
     @include cm.ilios-overview(c.$orange);
+    margin-left: 0.8rem;
 
     .block {
       @include cm.ilios-overview-block;
